--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    Go Back <a href="/public/labs/a2/index.html">Back</a>
+    Go Back <a href="/index.html">Back</a>
     <h1>HTML Examples</h1>
 
     <h2>Heading Tags</h2>
