--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -259,7 +259,7 @@
             style="fill:lime; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
     </svg><br><br>
 
-    Go Back <a href="/public/labs/a2/index.html">Back</a>
+    Go Back <a href="/index.html">Back</a>
 
 </body>
 
