--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -11,10 +11,10 @@
 <body>
     <ul>
         <li><a href="/tuiter/home.html">Home</a><br></li>
-        <li><a href="/tuiter/explore.html">Explore</a><br></li>
+        <li><a href="/tuiter/explore/index.html">Explore</a><br></li>
         <li><a href="/tuiter/notifications.html">Notifications</a><br></li>
         <li><a href="/tuiter/messages.html">Messages</a><br></li>
-        <li><a href="/tuiter/bookmarks.html">Bookmarks</a><br></li>
+        <li><a href="/tuiter/bookmarks/index.html">Bookmarks</a><br></li>
         <li><a href="/tuiter/lists.html">Lists</a><br></li>
         <li><a href="/tuiter/profile.html">Profile</a><br></li>
         <li><a href="/tuiter/tuit.html">Tuit</a><br></li>
