--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <a href = /labs/a2/index.html>Assignment 2 Labs</a><br>
+    <a href = /labs/a3/index.html>Assignment 3 Labs</a><br>
     <a href = /tuiter/navigation.html>Tuiter Project</a>
   </body>
 </html>
