Added the challenge section

--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="/tuiter/home.html">Home</a><br></li>
         <li><a href="/tuiter/explore/index.html">Explore</a><br></li>
+        <li><a href="/tuiter/explore-challenge/index.html">Explore Challenge</a><br></li>
         <li><a href="/tuiter/notifications.html">Notifications</a><br></li>
         <li><a href="/tuiter/messages.html">Messages</a><br></li>
         <li><a href="/tuiter/bookmarks/index.html">Bookmarks</a><br></li>
