--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <div class="container py-2">
+        <div><a href = "/tuiter/navigation.html">Go Back</a></div>
         <div class="row">
             <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-2">
                 <div class="list-group">
