--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -37,7 +37,7 @@
             <div class="wd-post-border">
                 <img id="post-image" src="/images/picture.jpg">
                 <div class="wd-post-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est, ut. </div>
-                <div class="wd-post-text"> Illo nemo unde assumenda qui nam exercitationem hic consectetur adipisci,
+                <div class="wd-post-text"> Illo nemo unde assumenda qui nam exercitationem hic consectetur adipisci,vinsdiv
                     eveniet
                     incidunt quos atque voluptatum enim deleniti reprehenderit accusantium quidem fuga. Et non harum
                     soluta doloribus iste impedit dolorum possimus eius, blanditiis iusto quam ratione praesentium
@@ -51,6 +51,7 @@
                         <img id="icon-comment" src="/images/comment.png"> &nbsp;37
                     </a>
                 </div>
+
                 <div>
                     <a class="wd-icon-links" href="#">
                         <img id="icon-share" src="/images/share.png"> &nbsp; 37
