Refactored the explore screen

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
   <a href=/labs/a4/index.html>Assignment 4 Labs</a><br>
   <a href=/labs/a5/index.html>Assignment 5 Labs</a><br>
   <a href=/labs/a5/todos/index.html>Assignment 5 Todos</a><br>
-  <a href=/tuiter/navigation.html>Tuiter Project</a>
+  <a href=/tuiter/navigation.html>Tuiter Project</a><br>
+  <!-- <a href="/tuiter/WhoToFollowList/index.html">Tuiter New Explore</a> -->
 </body>
 
 </html>
