--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -7,6 +7,8 @@
 
     <link href="/public/vendors/fontawesome/css/all.css" rel="stylesheet" />
     <link href="../../vendors/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet" />
+
     <script src="https://kit.fontawesome.com/93dd8195f9.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
 
@@ -169,7 +171,7 @@
                 <div class="list-group">
                     <div class="list-group-item">
                         <b>Who to follow</b>
-                    </div>
+                    </div> 
                     <div class="list-group-item">
                         <div class="row align-items-center justify-content-xl-around">
                             <div class="col-lg-2 col-xl-2 col-xxl-2">
