--- a/public/tuiter/HomeScreen/index.html
+++ b/public/tuiter/HomeScreen/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Explore</title>
+    <title>Home Screen</title>
 
     <link href="../../vendors/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet" />
