--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -10,9 +10,9 @@
 
 <body>
     <ul>
-        <li><a href="/tuiter/HomeScreen/index.html">Home</a><br></li>
-        <li><a href="/tuiter/explore/index.html">Explore</a><br></li>
-        <li><a href="/tuiter/explore-challenge/index.html">Explore Challenge</a><br></li>
+        <li><a href="/tuiter/HomeScreen/index.html">Home Screen</a><br></li>
+        <!-- <li><a href="/tuiter/explore/index.html">Explore</a><br></li> -->
+        <!-- <li><a href="/tuiter/explore-challenge/index.html">Explore Challenge</a><br></li> -->
         <li><a href="/tuiter/explore_JS/index.html">Explore Components</a><br></li>
         <li><a href="/tuiter/notifications.html">Notifications</a><br></li>
         <li><a href="/tuiter/messages.html">Messages</a><br></li>
