Added the home component

--- a/public/tuiter_old/bookmarks/index.html
+++ b/public/tuiter_old/bookmarks/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div> <a class="wd-go-back" href="/tuiter/navigation.html">Back</a></div>
+    <div> <a class="wd-go-back" href="/tuiter_old/navigation.html">Back</a></div>
 
     <div class="wd-bookmark-title">
         <h2>Bookmarks</h2>
