--- a/public/tuiter_old/home.html
+++ b/public/tuiter_old/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/tuiter/navigation.html"> Back </a>
+    <a href="/tuiter_old/navigation.html"> Back </a>
 
     <h1> Tuiter </h1>
     <h2> Home </h2>
@@ -33,9 +33,9 @@
 
     <ul>
 
-        <li> <a href="/tuiter/topic.html"> Topic 123</a><br><br>
+        <li> <a href="/tuiter_old/topic.html"> Topic 123</a><br><br>
             <img src="/images/picture.jpg" height="48px" width="48px">
-            <a href="/tuiter/profile.html"> Alice </a>@alice - 2h
+            <a href="/tuiter_old/profile.html"> Alice </a>@alice - 2h
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet culpa nemo nobis rem alias
                 debitis mollitia! Veritatis porro corporis quos deleniti non, sint excepturi sed, reiciendis temporibus
@@ -51,15 +51,15 @@
                 delectus quisquam.
             </p>
 
-            <a href="/tuiter/reply.html">Reply</a> 123 | 
-            <a href="/tuiter/retuit.html">Retuit</a> 243 |
-            <a href="/tuiter/like.html">Like</a> 345 |
-            <a href="/tuiter/share.html">Share</a><br><br>
+            <a href="/tuiter_old/reply.html">Reply</a> 123 |
+            <a href="/tuiter_old/retuit.html">Retuit</a> 243 |
+            <a href="/tuiter_old/like.html">Like</a> 345 |
+            <a href="/tuiter_old/share.html">Share</a><br><br>
         </li>
 
-        <li> <a href="/tuiter/topic.html"> Topic 234</a><br><br>
+        <li> <a href="/tuiter_old/topic.html"> Topic 234</a><br><br>
             <img src="/images/picture.jpg" height="48px" width="48px">
-            <a href="/tuiter/profile.html"> Bob </a>@bob - 1h
+            <a href="/tuiter_old/profile.html"> Bob </a>@bob - 1h
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet culpa nemo nobis rem alias
                 debitis mollitia! Veritatis porro corporis quos deleniti non, sint excepturi sed, reiciendis temporibus
@@ -75,10 +75,10 @@
                 delectus quisquam.
             </p>
 
-            <a href="/tuiter/reply.html">Reply</a> 120 |
-            <a href="/tuiter/retuit.html">Retuit</a> 224 |
-            <a href="/tuiter/like.html">Like</a> 34 |
-            <a href="/tuiter/share.html">Share</a>
+            <a href="/tuiter_old/reply.html">Reply</a> 120 |
+            <a href="/tuiter_old/retuit.html">Retuit</a> 224 |
+            <a href="/tuiter_old/like.html">Like</a> 34 |
+            <a href="/tuiter_old/share.html">Share</a>
         </li>
     </ul>
 
