--- a/public/tuiter_old/profile.html
+++ b/public/tuiter_old/profile.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/tuiter/navigation.html"> Back </a>
+    <a href="/tuiter_old/navigation.html"> Back </a>
 
     <h1> Tuiter </h1>
     <h2> Profile </h2>
@@ -17,7 +17,7 @@
     <img src="/images/picture.jpg" height="200px" width="100%"><br><br>
 
     <img src="/images/picture.jpg" height="48px" width="48px">
-    <a href="/tuiter/edit-profile.html"> Edit profile</a>
+    <a href="/tuiter_old/edit-profile.html"> Edit profile</a>
 
     <h2> Web Dev</h2>
     @Web Dev
