--- a/public/tuiter_old/tuit.html
+++ b/public/tuiter_old/tuit.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="/tuiter/navigation.html"> Back </a>
+    <a href="/tuiter_old/navigation.html"> Back </a>
 
     <h1> Tuiter </h1>
     <h2> Tuit </h2>
