--- a/public/tuiter_old/edit-profile.html
+++ b/public/tuiter_old/edit-profile.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <a href="/tuiter/profile.html"> Back </a>
+    <a href="/tuiter_old/profile.html"> Back </a>
 
     <h1> Tuiter </h1>
     <h2> Edit Profile </h2>
 
-    <a href ="/tuiter/profile.html">Save</a>
+    <a href ="/tuiter_old/profile.html">Save</a>
 
     <img src="/images/picture.jpg" height="200px" width="100%"><br><br>
     <input type = "file"><br>
